[package]
name = "ironoxide-cpp"
version = "0.17.0"
authors = ["IronCore Labs <info@ironcorelabs.com>"]
build = "build.rs"
edition = "2018"

[lib]
name = "ironoxide_shared"
crate-type = ["cdylib", "static"]

[dependencies]
log = "0.4"
itertools = "0.8"
ironoxide = "0.17.0"
chrono = "0.4"
serde_json = "~1.0"

[build-dependencies]
env_logger = "0.7"
rust_swig = "^0.4"
bindgen = "0.52"
